--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -48,3 +48,29 @@ span.timestamp {
     min-height: calc(100vh - 90px);
     opacity: 0.15;
 }
+
+
+.form-wrapper .Form-title {
+    font-size: 32px;
+    font-weight: 600;
+}
+
+.form-wrapper .form-group label {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.blog-filled-button {
+    font-size: 1rem;
+    margin-right: 0.5rem;
+    background-color: #CE6028 !important;
+    border: none;
+    color: #FFFFFF;
+    font-weight: 600;
+}
+
+.blog-filled-button.delete {
+    background-color: transparent !important;
+    border: 2px solid #CE6028 !important;
+    color: #CE6028 !important;
+}
