--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ textarea,
 button,
 select {
     font: inherit;
+    box-shadow: none !important;
 }
 
 p {
@@ -34,6 +35,11 @@ p {
     line-height: 1.4;
     font-size: 1.2rem;
     margin: 0.5em 0;
+}
+
+.form-control:focus,
+.form-select:focus {
+    border-color: #CE6028;
 }
 
 .excerpt {
@@ -47,13 +53,4 @@ p {
     font-size: 1.2rem;
     border: 1px solid #CE6028;
     border-radius: 4px;
-}
-
-.deleteButton {
-    background-color: palevioletred;
-    color: white;
-}
-
-.Form-title {
-    padding: 0 20px;
 }
