--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -2,19 +2,13 @@ section {
     margin-top: 1em;
 }
 
-.article {
-    border: 1px solid #CE6028;
-    border-radius: 10px;
-    padding: 1em;
-    height: 100%;
-}
-
 .article.details {
     border: none;
 }
 
 .article .blog-title {
     font-size: 24px;
+    font-weight: 600;
 }
 
 .article .blog-description {
@@ -25,7 +19,6 @@ section {
 .postCredit a,
 .postCredit a:visited {
     font-size: 1rem;
-    margin-right: 0.5rem;
     background-color: #CE6028 !important;
     border: none;
     color: #FFFFFF;
@@ -45,7 +38,7 @@ span.timestamp {
 }
 
 .not-found {
-    min-height: calc(100vh - 90px);
+    min-height: calc(100vh - 120px);
     opacity: 0.15;
 }
 
